--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kalebyoga",
+  "name": "asbury-park",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "hamburger-react": "^2.5.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
