--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hamburger-react": "^2.5.0",
     "next": "14.0.3",
     "react": "^18",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "sass": "^1.69.5"
